# ZKPRust

./: .clippy.toml  .gitignore  ABOUT.md  CHANGELOG.md  Cargo.toml  FOUNDERS_LOG.md  README.md  SECURITY.md
.github/workflows/: ci.yml
api/worker/: wrangler.toml
api/worker/src/: index.js
bindings/zkp-node/: Cargo.toml  README.md  package-lock.json  package.json  test.js
bindings/zkp-node/src/: lib.rs
bindings/zkp-python/: Cargo.toml  build.rs  pyproject.toml
bindings/zkp-python/src/: lib.rs
bindings/zkp-wasm/: Cargo.toml
bindings/zkp-wasm/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  sigma.rs  transcript.rs
demo/: index.html
demo/pkg/: zkp_wasm.js
docs/adr/: 001-curve-selection.md  002-binding-strategy.md
docs/pkg/: package.json  zkp_wasm.d.ts  zkp_wasm_bg.wasm  zkp_wasm_bg.wasm.d.ts
prover/: Cargo.toml
prover/src/: authenticator.rs  lib.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  validation_engine.rs
verifier/tests/: integration_tests.rs
