[package]
name = "zkp-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Python FastAPI Native Module for fast verification."

[lib]
name = "gabanode_zkp"
crate-type = ["cdylib"]

[dependencies]
zkprust-verifier = { path = "../../verifier" }
pyo3 = { version = "0.22", features = ["extension-module"] }
