[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gabanode-zkp"
version = "0.1.0"
description = "Zero-Knowledge Proof authentication SDK for Python/FastAPI — passwordless auth without storing credentials"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = [
    "zero-knowledge-proof", "zkp", "authentication", "passwordless",
    "schnorr", "cryptography", "fastapi", "privacy", "rust", "govtech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://zkp.gabanodelab.com"
Repository = "https://github.com/T3chj3ff/ZKPRust"
"Bug Tracker" = "https://github.com/T3chj3ff/ZKPRust/issues"

[tool.maturin]
python-source = "python"
module-name = "gabanode_zkp"
features = ["pyo3/extension-module"]
