[package]
name = "zkp-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser-based ZKP prover WASM bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zkprust-prover = { path = "../../prover" }
zkprust-verifier = { path = "../../verifier" }
zkprust-core = { path = "../../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
